# yggdrasil-rs

./: .dockerignore  .gitignore  COMPATIBILITY_ASSESSMENT.md  Cargo.toml  Dockerfile  README.md  benchmarks.toml  example.conf
.github/: copilot-instructions.md
.github/instructions/: copilot.instructions.md
.github/workflows/: _build-binaries.yml  benchmark.yml  build.yml  release.yml
crates/genkeys/: Cargo.toml
crates/genkeys/src/: main.rs
crates/yggdrasil/: Cargo.toml
crates/yggdrasil-address/: Cargo.toml
crates/yggdrasil-address/src/: lib.rs
crates/yggdrasil-bench/: Cargo.toml  README.md
crates/yggdrasil-bench/src/: main.rs
crates/yggdrasil-bench/src/core/: mod.rs  timing.rs
crates/yggdrasil-bench/src/emit/: dashboard.rs  datadog.rs  mod.rs  results.rs
crates/yggdrasil-bench/src/probe/: memory.rs  mod.rs
crates/yggdrasil-bench/src/scenario/: config.rs  mod.rs
crates/yggdrasil-config/: Cargo.toml
crates/yggdrasil-config/src/: config.rs  defaults.rs  lib.rs
crates/yggdrasil-core/: Cargo.toml
crates/yggdrasil-core/src/: address.rs  admin.rs  admin_compat.rs  config.rs  core.rs  crypto.rs  handshake.rs  lib.rs  link.rs  lookup.rs  metrics.rs  multicast.rs  nodeinfo.rs  peer.rs  proto.rs  quic_pool.rs  router.rs  session.rs  spanning_tree.rs  tun_adapter.rs
crates/yggdrasil-core/tests/: README.md  access_control_test.rs  admin_integration_test.rs  admin_server_test.rs  e2e_test.rs  handshake_integration_test.rs  interop_test.rs  lookup_integration_test.rs  quic_test.rs  websocket_test.rs
crates/yggdrasil-crypto/: Cargo.toml
crates/yggdrasil-crypto/src/: box_crypto.rs  conversion.rs  lib.rs
crates/yggdrasil-link/: Cargo.toml
crates/yggdrasil-link/src/: handshake.rs  lib.rs  link.rs  links.rs  peer_handler.rs  quic.rs  tcp.rs  tls.rs  unix.rs  websocket.rs
crates/yggdrasil-multicast/: Cargo.toml
crates/yggdrasil-multicast/src/: advertisement.rs  config.rs  lib.rs  multicast.rs
crates/yggdrasil-routing/: Cargo.toml
crates/yggdrasil-routing/src/: bloom.rs  config.rs  lib.rs  pathfinder.rs  peer.rs  router.rs  types.rs
crates/yggdrasil-session/: Cargo.toml
crates/yggdrasil-session/src/: buffer.rs  info.rs  init.rs  lib.rs  manager.rs
crates/yggdrasil-tun/: Cargo.toml
crates/yggdrasil-tun/src/: lib.rs  tun.rs  wintun_dll.rs
crates/yggdrasil-types/: Cargo.toml
crates/yggdrasil-types/src/: error.rs  keys.rs  lib.rs
crates/yggdrasil-wire/: Cargo.toml
crates/yggdrasil-wire/src/: encoding.rs  framing.rs  lib.rs  packet.rs  types.rs
crates/yggdrasil/src/: main.rs  service.rs
crates/yggdrasilctl/: Cargo.toml
crates/yggdrasilctl/src/: main.rs
docs/: IMPLEMENTATION_STATUS.md  fix-summary.md  peer-tracking-analysis.md  ping-issue-analysis.md  protocol-integration-guide.md  refactoring-summary.md  rust-2024-notes.md
docs/thirdparty-go/: README.md  admin-admin.md  admin-error-getself-getsessions.md  admin-peers-paths-tree.md  cmd-genkeys-main.md  cmd-yggdrasil-chuser.md  cmd-yggdrasil-main.md  cmd-yggdrasilctl-cmd_line_env.md  cmd-yggdrasilctl-main.md  config-config.md  core-api-link.md  core-core.md  core-link-protocols.md  core-link-tcp-tls-options.md  core-pool-nodeinfo-debug.md  core-types-version-proto.md  ironwood-overview.md  remaining-files-summary.md  rust-implementation-verification.md  summary.md  tun-multicast-ipv6.md  version-address-config.md
src/: admin.rs  admin_commands.rs  admin_server.rs  cli.rs  core.rs  debug_logger.rs  lib.rs  main.rs  routing.rs  service.rs  utils.rs  version.rs
