[workspace]
resolver = "2"
members = [
    "crates/yggdrasil-core",
    "crates/yggdrasil",
    "crates/yggdrasilctl",
    "crates/genkeys", "crates/yggdrasil-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yggdrasil Contributors"]
license = "LGPL-3.0"
repository = "https://github.com/yggdrasil-network/yggdrasil-go"

[workspace.dependencies]
yggdrasil-core = { path = "crates/yggdrasil-core" }

tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "1.1", features = ["linked-hash-map", "preserve_order"] }
toml = "0.9"

ed25519-dalek = "2.2"
aws-lc-rs = "1.10"
rand = "0.9"
socket2 = "0.6"
pnet = "0.35"
tun = "0.8"

clap = { version = "4", features = ["derive"] }

anyhow = "1.0"
thiserror = "2.0"

log = "0.4"
env_logger = "0.11"

hex = "0.4"
bytes = "1.10"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1 
strip = true
panic = "abort"
overflow-checks = false
incremental = false

# Additional size optimizations for dependencies
[profile.release.package."*"]
opt-level = "z"
strip = true
