[workspace]
resolver = "2"
members = [
    "crates/yggdrasil-core",
    "crates/yggdrasil",
    "crates/yggdrasilctl",
    "crates/genkeys",
    "crates/yggdrasil-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Yggdrasil Contributors"]
license = "LGPL-3.0"
repository = "https://github.com/yggdrasil-network/yggdrasil-go"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = 3
strip = true


[workspace.dependencies]
yggdrasil-core = { path = "crates/yggdrasil-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-hjson = { version = "1.1", features = [
    "linked-hash-map",
    "preserve_order",
] }
toml = "0.9"
ed25519-dalek = "2.2"
aws-lc-rs = "1.14.1"
rand = "0.9"
socket2 = "0.6"
pnet = "0.35"
tun = "0.8"
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
hex = "0.4"
bytes = "1.10"
parking_lot = "0.12"
quinn = { version = "0.11.9", default-features = false, features = [
    "bloom",
    "log",
    "platform-verifier",
    "runtime-tokio",
    "rustls-aws-lc-rs",
    "aws-lc-rs",
] }
blake2 = "0.10.6"
sha2 = "0.10.9"
nix = { version = "0.30.1", features = ["socket"] }
rcgen = { version = "0.14.5", default-features = false, features = [
    "crypto",
    "pem",
    "aws_lc_rs",
] }
pem = "3.0.6"
pkcs8 = { version = "0.10.2", features = ["alloc", "pem"] }
time = "0.3.44"
rustls = { version = "0.23.34", features = ["aws_lc_rs"] }
rustls-pemfile = "2.2.0"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.31"
siphasher = "1.0.1"
tempfile = "3.23.0"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
port_check = "0.3.0"
service-manager = "0.8.0"
getrandom = "0.3"
ctrlc = "3.5"
chrono = "0.4.42"
datadog-api-client = { version = "0.21.0", default-features = false, features = [
    "rustls-tls",
] }
hdrhistogram = "7.5.4"
statrs = "0.18.0"
