[package]
name = "yggdrasil-bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
datadog-api-client.workspace = true
env_logger.workspace = true
hdrhistogram.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
statrs.workspace = true
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
yggdrasil-core.workspace = true
