[package]
name = "yggdrasil-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Configuration for the Yggdrasil network"

[dependencies]
yggdrasil-types.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-hjson.workspace = true
hex.workspace = true
thiserror.workspace = true
tracing.workspace = true
