[package]
name = "yggdrasil-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
quinn.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-hjson.workspace = true
toml.workspace = true
ed25519-dalek.workspace = true
aws-lc-rs.workspace = true
rand.workspace = true
socket2.workspace = true
pnet.workspace = true
tun.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
hex.workspace = true
bytes.workspace = true
parking_lot.workspace = true
blake2.workspace = true
sha2.workspace = true
nix.workspace = true
rcgen.workspace = true
pem.workspace = true
pkcs8.workspace = true
time.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true
siphasher.workspace = true

[dev-dependencies]
env_logger.workspace = true
tempfile.workspace = true
testcontainers-modules.workspace = true
port_check.workspace = true
