[package]
name = "yggdrasil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Cryptographic operations for the Yggdrasil network"

[dependencies]
yggdrasil-types.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
curve25519-dalek.workspace = true
crypto_box.workspace = true
xsalsa20poly1305.workspace = true
salsa20.workspace = true
generic-array = "0.14"
typenum = "1.19"
blake2.workspace = true
sha2.workspace = true
rand.workspace = true
hex.workspace = true
thiserror.workspace = true
