[package]
name = "yggdrasil-multicast"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Multicast peer discovery for the Yggdrasil network"

[dependencies]
yggdrasil-types.workspace = true
yggdrasil-config.workspace = true
tokio.workspace = true
socket2.workspace = true
network-interface = "2.0"
regex.workspace = true
blake2.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
hex.workspace = true
rand.workspace = true
async-trait.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { workspace = true, features = ["Win32_Networking_WinSock"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
