[package]
name = "yggdrasil-routing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Routing implementation for the Yggdrasil network"

[dependencies]
yggdrasil-types.workspace = true
yggdrasil-wire.workspace = true
yggdrasil-crypto.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
bloomfilter.workspace = true
tracing.workspace = true
rand.workspace = true
