[package]
name = "yggdrasilctl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "yggdrasilctl"
path = "src/main.rs"

[dependencies]
yggdrasil-core.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
serde = { workspace = true, features = ["derive"] }
